Use semver versioning

--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=OpenStreetMap-esp32
-version=v0.99.0
+version=0.99.0
 author=Cellie
 maintainer=Cellie <CelliesProjects@users.noreply.github.com>
 sentence=A library to display OpenStreetMap maps on ESP32 devices.
