--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=This library allows you to fetch and display OpenStreetMap tiles on ES
 category=Display
 url=https://github.com/CelliesProjects/OpenStreetMap-esp32
 architectures=esp32
-depends=LovyanGFX, PNGdec, SD, WiFiClient, HTTPClient
+depends=LovyanGFX, PNGdec
