--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=OpenStreetMap-esp32
-version=0.99.0
+version=0.99.1
 author=Cellie
 maintainer=Cellie <CelliesProjects@users.noreply.github.com>
 sentence=A library to display OpenStreetMap maps on ESP32 devices.
@@ -7,4 +7,5 @@ paragraph=This library allows you to fetch and display OpenStreetMap tiles on ES
 category=Display
 url=https://github.com/CelliesProjects/OpenStreetMap-esp32
 architectures=esp32
+includes=OpenStreetMap-esp32.h
 depends=LovyanGFX, PNGdec
